[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meowallet"
version = "0.1.0"
description = "Production-ready Python client for the MEO Wallet payment API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nuno" }]
keywords = ["meowallet", "meo", "wallet", "payments", "api", "altice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.25,<1",
    "pydantic>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "coverage[toml]>=7.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Documentation = "https://developers.wallet.pt/en/"
Repository = "https://github.com/nuno/meowallet-python"

[tool.hatch.build.targets.wheel]
packages = ["src/meowallet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["A002", "A003", "A004", "RUF022"]

[tool.ruff.lint.isort]
known-first-party = ["meowallet"]

[tool.coverage.run]
source = ["meowallet"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
